--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        background: #ffffff; /* ←背景白 */
+        background: #bfc0c2;
       }
       model-viewer {
         width: 100vw;
@@ -22,7 +22,7 @@
   </head>
   <body>
     <model-viewer
-      src="PhaseObit.glb"
+      src="PhaseOrbit.glb"
       alt="3D Model"
       camera-controls
       auto-rotate
