--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background: #a7b3b9;
+      background: #d3d3d3;
     }
 
     model-viewer {
@@ -22,21 +22,24 @@
 
     /* 左上・最小UI */
     .env-ui {
-      position: fixed;
-      top: 12px;
-      left: 12px;
-      display: flex;
-      gap: 6px;
-      z-index: 10;
-    }
+  position: fixed;
+  top: 12px;
+  left: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  z-index: 10;
+}
+
 
     .env-ui button {
-      padding: 4px 10px;
-      font-size: 11px;
-      border-radius: 4px;
-      border: none;
-      cursor: pointer;
-    }
+  padding: 15px 30px;   /* ← ほぼ倍 */
+  font-size: 24px;      /* ← 文字も倍 */
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+}
+
 
     /* White */
     .btn-white {
@@ -88,7 +91,7 @@
       env: 'warehouse',
       exposure: 1.2,
       shadow: 0.3,
-      bg: '#111111'
+      bg: '#5a5c5d'
     }
   };
 
