--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
       background: black;
       color: white;
     }
+    @media (hover: none) and (pointer: coarse) {
+  .env-ui {
+    gap: 20px;
+  }
+
+  .env-ui button {
+    padding: 32px 44px;
+    font-size: 28px;
+    border-radius: 14px;
+  }
+}
   </style>
 </head>
 
@@ -82,14 +93,14 @@
   const ENV_PRESETS = {
     white: {
       env: 'neutral',
-      exposure: 0.9,
+      exposure: 0.8,
       shadow: 0.0,
       bg: '#a7b3b9'
     },
     black: {
       env: 'warehouse',
       exposure: 1.2,
-      shadow: 0.3,
+      shadow: 0.0,
       bg: '#5a5c5d'
     }
   };
